Fixed some syntax and commenting